# CompBio-Nanopore

./: README.md  cache_delete.sh  correctSequences.txt  pyproject.toml  requirements.txt  run.sh
data/: 1_1.csv  1_2.csv  1_3.csv  2_1.csv  2_2.csv  2_3.csv  3_1.csv  3_2.csv  3_3.csv  4_1.csv  4_2.csv  4_3.csv  5_1.csv  5_2.csv  5_3.csv  6_1.csv  6_2.csv  6_3.csv  7_1.csv  7_2.csv  7_3.csv  animalBlast.fasta  extraAnimalBlast.fasta  extraAnimalBlastMetNamen.fasta
examples/: sequencer.ipynb
src/: app.py  db.py  main.py
src/myapi/resources/: dna.py  matcher.py  mutateDNA.py  mutatedDNA.py  sequences.py  species.py
src/static/: main.js
src/templates/: base.html  home.html  index.html
tests/: test_compbio_nanopore.py
