[tool.poetry]
name = "CompBio-Nanopore"
version = "0.1.0"
description = ""
authors = ["Hayaan Hussein Abdi <hayaanhusseinabdi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
editdistance = "^0.6.0"
bio = "^1.3.9"
flask = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
